--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   provider: ^6.1.2
   collection: ^1.19.0
+  flutter_login: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-  #   - images/a_dot_burr.jpeg
+    - assets/images/app_logo_dark.png
+    - assets/images/app_logo_light.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
